tests/paczka1/fuzzy1/96267982.err
Error in line 3: bnSGIaxU S696 34,8
Error in line 4: bnSGIaxU A499 7,3
Error in line 14: bnSGIaxU S696 24,5
Error in line 6: ICmi9 S696 18,9
Error in line 18: bnSGIaxU S97 82,9
Error in line 25: ICmi9 S97 34,3
Error in line 32: TYkx8B S696 64,6
